--- a/blog.html
+++ b/blog.html
@@ -40,8 +40,8 @@
         <nav class="primary-navigation">
           <ul  class="nav-list">
             <!--The aria make it possible for the screen reader assesebility-->
-            <li><a class="active" href="index.html"aria-label="Go to the Top of the page">Home</a></li>
-            <li><a href="blog.html" aria-label="Go to the Blog page to get tips">Blog</a></li>
+            <li><a href="index.html"aria-label="Go to the Top of the page">Home</a></li>
+            <li><a class="active" href="blog.html" aria-label="Go to the Blog page to get tips">Blog</a></li>
             <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
           </ul>
         </nav>
