--- a/signup.html
+++ b/signup.html
@@ -36,9 +36,9 @@
         <nav class="primary-navigation">
           <ul  class="nav-list">
             <!--The aria make it possible for the screen reader assesebility-->
-            <li><a class="active" href="index.html"aria-label="Go to the Top of the page">Home</a></li>
+            <li><a href="index.html"aria-label="Go to the Top of the page">Home</a></li>
             <li><a href="blog.html" aria-label="Go to the Blog page to get tips">Blog</a></li>
-            <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
+            <li><a  class="active"href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
           </ul>
         </nav>
         <button class="button | display-sm-none display-md-inline-flex"> <a href="./signup.html"> Signup</a></button>
