validator for Blog page using w3C

--- a/blog.html
+++ b/blog.html
@@ -16,14 +16,6 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,400;1,900&display=swap"
     rel="stylesheet">
 </head>
-
-<body>
-  <!-- here is the markup for the nav elements and logo-->
-
-  <body>
-    <!-- here is the markup for the nav elements and logo-->
-    <!--here is the markup for Nav elemnents and logo and the logo is link to Home page-->
-
 <body>
   <!--Here is the makeup for the Nav element-->
   <header class="primary-header">
@@ -34,13 +26,13 @@
         <button class=" mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
           <img class=" icon-hamburger" src="./assets/images/icon-open.png" alt="" aria-hidden="true">
           <img class="icon-close" src="./assets/images/icon-close.png" alt="" aria-hidden="true">
-        <!--This is to hide the menu visible-->
-          <span class="visually-hidden">menu</menu></span>
+          <!--This is to hide the menu visible-->
+          <span class="visually-hidden">menu</span>
         </button>
         <nav class="primary-navigation">
-          <ul  class="nav-list">
+          <ul class="nav-list">
             <!--The aria make it possible for the screen reader assesebility-->
-            <li><a href="index.html"aria-label="Go to the Top of the page">Home</a></li>
+            <li><a href="index.html" aria-label="Go to the Top of the page">Home</a></li>
             <li><a class="active" href="blog.html" aria-label="Go to the Blog page to get tips">Blog</a></li>
             <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
           </ul>
@@ -50,209 +42,208 @@
     </div>
   </header>
   <!--Here end the makeup for the Nav element-->
-    <!-- Here is the main body of the blog page. It has a background image as a cover and the text cover-->
-    <section class="padding-block-900">
-      <div class="container">
-        <div class="even-columns">
-          <div class="flow">
-            <div class="header-blog">
-              <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of 
+  <!-- Here is the main body of the blog page. It has a background image as a cover and the text cover-->
+  <section class="padding-block-900">
+    <div class="container">
+      <div class="even-columns">
+        <div class="flow">
+          <div class="header-blog">
+            <img src="./assets/images/blog-bground.jpg" alt=" background showing different kinds of 
                                 fruit and vegetable">
-              <div class="text-block">
-                <h2 class="fs-primary-heading">The  Blog </h2>
-              </div>
-              <div class="text-b">
-                <h3  class="fs-secondary-heading">Recent Posts </h3>
-              </div>
+            <div class="text-block">
+              <h2 class="fs-primary-heading">The Blog </h2>
+            </div>
+            <div class="text-b">
+              <h3 class="fs-secondary-heading">Recent Posts </h3>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- Here is the markup for the blog or container that contain all the blog that hold pictures and texts-->
+    </div>
+  </section>
+  <!-- Here is the markup for the blog or container that contain all the blog that hold pictures and texts-->
 
-    <section>
-
-      <div class="blog-row">
-        <div class="blog-column">
-          <div class="blog">
-            <img src="./assets/images/coco.jpg" alt="coconut picture">
-          </div>
-          <div class="blog-text">
+  <section>
+    <div class="blog-row">
+      <div class="blog-column">
+        <div class="blog">
+          <img src="./assets/images/coco.jpg" alt="coconut picture">
+        </div>
+        <div class="blog-text">
           <h3>Coconut Oil</h3>
           <p> It's full of fatty acids that your body needs and may help improve cognitive function, metabolism, and
-            hair and skin health </p>
-          </div> 
+            hair and skin health
+          </p>
         </div>
+      </div>
+    </div>
 
+    <div class="blog-row">
+      <div class="blog-column">
+        <div class="blog">
+          <img src="./assets/images/alover-gel.jpg" alt="An image of Alovera gel">
+        </div>
+        <div class="blog-text">
+          <h3 class="blog-h2">Alovera Gel</h3>
+          <p class="blog-p"> Alovera Gel contains vitamins, antioxidants, and other properties that can help with mild
+            and severe
+            health issues. You can relieve several issues
+            just by applying or drinking aloe vera juice.
+            .</p>
+        </div>
+      </div>
+    </div>
 
-        <div class="blog-row">
-          <div class="blog-column">
-            <div class="blog">
-              <img src="./assets/images/alover-gel.jpg">
-            </div >
-            <div class="blog-text">
-            <h3 class="blog-h2">Alovera Gel</h3>
-            <p class="blog-p"> Alovera Gel contains vitamins, antioxidants, and other properties that can help with mild and severe
-              health issues. You can relieve several issues
-              just by applying or drinking aloe vera juice.
-              .</p>
-            </div>
+    <div class="blog-row">
+      <div class="blog-column">
+        <div class="blog">
+          <img src="./assets/images/loss-wght.jpg" alt="A photo of a woman sowing weight loss">
+        </div>
+        <div class="blog-text">
+          <h3>Tips for weight loss at home</h3>
+          <p> Some of tips are Do intermitent Fasting, eat 80% of fruit and vegetable, be Active ..</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog-row">
+      <div class="blog-column">
+        <div class="blog">
+          <img src="./assets/images/lemon-green.png" alt="A green lemon fruit">
+        </div>
+        <div class="blog-text">
+          <h3>Resons to take lemon Juice</h3>
+          <p> Lemons are a good source of Vitamin C, which promotes immunity, battles infection, heals wounds, stop
+            oxidation and more </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog-row">
+      <h2 class="fw-bold padding-block-700"> Popular Posts</h2>
+      <div class="blog-column">
+        <div class="blog">
+          <img src="./assets/images/carrot.png" alt=" image showing  carrot and other items">
+        </div>
+        <div class="blog-text">
+          <h3>Health benefit of carrot</h3>
+          <p> It contain vitamins A, C, and K. It help to improve eye health, boost your immune system, and
+            strengthen your skin and more- </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog-row">
+      <div class="blog-column">
+        <div class="blog">
+          <img src="./assets/images/stone-feets.jpg" alt=" a Picture showing feet and stone">
+        </div>
+        <div class="blog-text">
+          <h3>Walking on the stone</h3>
+          <p> Walking barefoot on stones has so many health benefit, such as less tension , reduce body pain ,
+            reduce dizzines. lower blood pressure amd more</p>
+        </div>
+      </div>
+    </div>
+
+    <h2 class="fw-bold padding-block-700 "> Testimonies</h2>
+    <div class="blog-row">
+      <div class="blog-column-testimony">
+        <div class="blog">
+          <img src="./assets/images/girl-pic.jpg" alt=" a Girl's avater picture" class="testimony-img">
+        </div>
+        <div class="blog-text">
+          <h3>'Margreete'</h3>
+          <p>lemon juice reduce my coughing. Thanks</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="blog-row">
+      <div class="blog-column-testimony">
+        <div class="blog">
+          <img src="./assets/images/woman2-pc.png" alt="a woman  averter picture" class="testimony-img">
+        </div>
+        <div class="blog-text">
+          <h3>'chimdalu'</h3>
+          <p> wakling on the stone heal my dizzines. Thanks</p>
+        </div>
+      </div>
+
+      <div class="blog-row">
+        <div class="blog-column-testimony">
+          <div class="blog">
+            <img src="./assets/images/man-pc.png" alt=" a man 's avater picture" class="testimony-img">
+          </div>
+          <div class="blog-text">
+            <h3>'Mark'</h3>
+            <p> Your recommendation work for me, thanks</p>
           </div>
         </div>
-
-        <div class="blog-row">
-          <div class="blog-column">
-            <div class="blog">
-              <img src="./assets/images/loss-wght.jpg">
-            </div>
-            <div class="blog-text">
-            <h3>Tips for weight loss at home</h3>
-            <p> Some of tips are Do intermitent Fasting, eat 80% of fruit and vegetable, be Active ..</p>
-          </div>
-          </div>
+      </div>
+    </div>
+  </section>
 
 
-          <div class="blog-row">
-            <div class="blog-column">
-              <div class="blog">
-                <img src="./assets/images/lemon-green.png">
-              </div>
-              <div class="blog-text">
-              <h3>Resons to take lemon Juice</h3>
-              <p> Lemons are a good source of Vitamin C, which promotes immunity, battles infection, heals wounds, stop
-                oxidation and more </p>
-            </div>
-            </div>
-          </div>
+  <!-- Here is the markup for the footer-->
 
-          <div class="blog-row">
-            <h2 class="fw-bold padding-block-700"> Popular Posts</h2>
-            <div class="blog-column">
-              <div class="blog">
-                <img src="./assets/images/carrot.png">
-              </div>
-              <div class="blog-text"> 
-              <h3>Health benefit of carrot</h3>
-              <p> It contain vitamins A, C, and K. It help to improve eye health, boost your immune system, and
-                strengthen your skin and more- </p>
-              </div>
-            </div>
+  <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
+    <div class="container">
+      <div class="even-columns">
+        <div id="img-footer">
+          <a href="index.html"><img src="./assets/images/logo-ever.png" alt="everyoung logo"></a>
+          <ul class="social-list padding-block-700 ">
+            <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
+                aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
+            </li>
+            <li><a href="https://twitter.com/" target="_blank" rel="noopener"
+                aria-label="Visit our Twitter page (opens in a new tab)" class="fa fa-twitter"></a>
+            </li>
+            <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener"
+                aria-label="Visit our linkedin page (opens in a new tab)" class="fa fa-linkedin"></a>
+            </li>
+            <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
+                aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
+            </li>
+          </ul>
+        </div>
+        <div>
 
+          <nav class="footer-nav">
+            <ul>
+              <li><a href="index.html" aria-label="Go to the top page">Home</a></li>
+              <li><a href="blog.html" aria-label="Go to the Blog page">blog</a></li>
+              <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
 
-            <div class="blog-row">
-              <div class="blog-column">
-                <div class="blog">
-                  <img src="./assets/images/stone-feets.jpg">
-                </div>
-                <div class="blog-text">
-                <h3>Walking on the stone</h3>
-                <p> Walking barefoot on stones has so many health benefit, such as less tension , reduce body pain ,
-                  reduce dizzines. lower blood pressure amd more</p>
-                </div>
-              </div>
-            </div>
-
-            <h2 class="fw-bold padding-block-700 "> Testimonies</h2>
-            <div class="blog-row">
-              <div class="blog-column-testimony">
-                <div class="blog">
-                  <img src="./assets/images/girl-pic.jpg" class="testimony-img">
-                </div>
-                <div class="blog-text">
-                <h3>'Margreete'</h3>
-                <p>lemon juice reduce my coughing. Thanks</p>
-              </div>
-              </div>
-
-
-              <div class="blog-row">
-                <div class="blog-column-testimony">
-                  <div class="blog">
-                    <img src="./assets/images/woman2-pc.png" class="testimony-img">
-                  </div>
-                  <div class="blog-text">
-                  <h3>'chimdalu'</h3>
-                  <p> wakling on the stone heal my dizzines. Thanks</p>
-                 </div>
-                </div>
-
-                <div class="blog-row">
-                  <div class="blog-column-testimony">
-                    <div class="blog">
-                      <img src="./assets/images/man-pc.png" class="testimony-img">
-                    </div>
-                    <div class="blog-text">
-                    <h3>'Mark'</h3>
-                    <p> Your recommendation work for me, thanks</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-    </section>
-
-
-    <!-- Here is the markup for the footer-->
-    
-    <footer class="padding-block-700 bg-neutral-900 text-neutral-100">
-      <div class="container">
-        <div class="even-columns">
-          <div id="img-footer">
-            <a href="index.html"><img src="./assets/images/logo-ever.png"   alt="everyoung logo"></a></li>
-            <ul class="social-list padding-block-700 ">
-              <li> <a href="https://www.facebook.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our facebook page (opens in a new tab)" class="fa fa-facebook"></a>
+              <!-- These below are useful links that help me alot- I also encourage you to go through them-->
+              <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
+                  aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
               </li>
-              <li><a href="https://twitter.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our Twitter page (opens in a new tab)" class="fa fa-twitter"></a>
+              <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
+                  aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
+              <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
+                  aria-label="Visit Acessibilty page (opens in a new tab)"> Checkers</a></li>
+              <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
+                  aria-label="undraw page (opens in a new tab)"> undraw</a></li>
+              <li><a href="https://coolors.co" target="_blank" rel="noopener"
+                  aria-label="Visit  color palette page (opens in a new tab)"> palette
+                  generator</a></li>
+              <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
+                  aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
               </li>
-              <li><a href="https://www.linkedin.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our linkedin page (opens in a new tab)" class="fa fa-linkedin"></a>
-              </li>
-              <li><a href="https://www.youtube.com/" target="_blank" rel="noopener"
-                  aria-label="Visit our youtube page (opens in a new tab)" class="fa fa-youtube"></a>
-              </li>
+              <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
+                  aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
             </ul>
-          </div>
-          <div>
-            
-            <nav class="footer-nav">
-              <ul>
-                <li><a href="index.html"aria-label="Go to the top page">Home</a></li>
-                <li><a href="blog.html"aria-label="Go to the Blog page">blog</a></li>
-                <li><a href="signup.html" aria-label="Go to the contact page and signup">Contact Us</a></li>
+          </nav>
+        </div>
+        <div>
+          <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
+        </div>
+      </div>
+    </footer>
 
-                <!-- These below are useful links that help me alot- I also encourage you to go through them-->
-                <li><a href="https://stackoverflow.com/" target="_blank" rel="noopener"
-                    aria-label="Visit stackoverflow page (opens in a new tab)"> Stack overflow</a>
-                </li>
-                <li><a href="https://www.freepik.com/" target="_blank" rel="noopener"
-                    aria-label="Visit freepik page (opens in a new tab)">freepik</a></li>
-                <li><a href="https://wave.webaim.org" target="_blank" rel="noopener"
-                    aria-label="Visit Acessibilty page (opens in a new tab)"> Checkers</a></li>
-                <li><a href="https://undraw.co/illustrations" target="_blank" rel="noopener"
-                    aria-label="undraw page (opens in a new tab)"> undraw</a></li>
-                <li><a href="https://coolors.co" target="_blank" rel="noopener"
-                    aria-label="Visit  color palette page (opens in a new tab)"> palette
-                    generator</a></li>
-                <li><a href="https://usersnap.com/blog/background-webdesign/ " target="_blank" rel="noopener"
-                    aria-label="Visit usersnap page (opens in a new tab)">Usersnap</a>
-                </li>
-                <li><a href="https://www.w3schools.com/" target="_blank" rel="noopener"
-                    aria-label="Visit  w3school  (opens in a new tab)">w3school</a></li>
-              </ul>
-            </nav>
-          </div>
-          <div>
-
-            <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
-
-            <!---fontawsone kit--->
-            <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
-            <script src="./assets/main.js"></script>
-
-
-  </body>
-
+        <!--fontawsone kit-->
+        <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+        <script src="./assets/main.js"></script>
+</body>
 </html>
