check the blog.html for validity using W3C

--- a/blog.html
+++ b/blog.html
@@ -23,9 +23,9 @@
       <div class="nav-wrapper">
         <a href="index.html"><img src="./assets/images/logo-ever.png" alt="Ever Joung logo"></a>
         <!--Here is the markup for the mobile toggling buttons and aria here is because of the screen reader-->
-        <button class=" mobile-nav-toggle" aria-controls="primary-navigation" aria-expanded="false">
-          <img class=" icon-hamburger" src="./assets/images/icon-open.png" alt="" aria-hidden="true">
-          <img class="icon-close" src="./assets/images/icon-close.png" alt="" aria-hidden="true">
+        <button class=" mobile-nav-toggle" >
+          <img class=" icon-open" src="./assets/images/icon-open.png" alt="open icon image" >
+          <img class="icon-close" src="./assets/images/icon-close.png" alt="close icon image">
           <!--This is to hide the menu visible-->
           <span class="visually-hidden">menu</span>
         </button>
@@ -240,10 +240,12 @@
           <p class="padding-block-700" id="copy-right">copy right and &copy; 2022 coding @adimorauju@gmail.com</p>
         </div>
       </div>
-    </footer>
+    </div>
+  </footer>
 
-        <!--fontawsone kit-->
-        <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
-        <script src="./assets/main.js"></script>
+  <!--fontawsone kit-->
+  <script src="https://kit.fontawesome.com/72e64da51c.js" crossorigin="anonymous"></script>
+  <script src="./assets/main.js"></script>
 </body>
+
 </html>
